--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,12 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div id="main">
+    <div id="header"></div>
+    <div id="content">  
+      <%= yield %>
+    </div>
+    <div id="footer"></div>
+  </div>
 </body>
 </html>
