invites checking in register controller

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,14 +3,14 @@
 <div id="anonymous-forms" class="content">
   <div class="left">
     Есть аккаунт?
-    <div class="login link">
+    <div class="link">
       <a href="/login">Входи</a>
     </div>
   </div>
 
   <div class="right">
     Нет аккаунта? 
-    <div class="register link">
+    <div class="link">
       <a href="/register">Регистрируйся</a>
     </div>
   </div>
