--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
 </head>
 <body>
   <div id="main">
-    <div id="header"></div>
+    <div id="header">
+      <div class="link"><a href="/">Дедман</a></div>
+    </div>
     <div id="content">  
       <%= yield %>
     </div>
