--- a/public/stylesheets/dedman.css
+++ b/public/stylesheets/dedman.css
@@ -3,15 +3,25 @@
 
 body {background-color:#4C4240;}
 h1 {text-align:center;}
+a {color:#D6D4AB;}
 
 #main {margin-left:auto;margin-right:auto;width:800px;}
+#main .link {padding-top:35px;font-size:12px;}
 #header {height:50px;}
 #content {min-height:400px;background-color:#322D36;color:#868C5A;padding:10px;}
 #footer {height:200px;}
 
-.content {padding-top:10px;}
+.content {padding-top:10px;padding-bottom:20px;}
+.center {text-align:center;}
+.errors {color:red;padding-bottom:20px;}
 
 #anonymous-forms .left {float:left;padding-left:150px;}
 #anonymous-forms .right {width:290px;float:right;border-left:1px solid #868C5A;padding-left:100px;}
 #anonymous-forms .link {padding-top:100px;font-size:20px;padding-bottom:150px;}
-#anonymous-forms a {color:#D6D4AB;}
+
+form .field {padding-bottom:20px;}
+form .label {padding-bottom:5px;}
+form .field input {border:1px solid #868C5A;height:30px;width:250px;background-color:#4C4240;color:#D6D4AB;font-size:20px;}
+form .submit {padding-top:30px;}
+
+#content .register {margin-left:auto;margin-right:auto;width:250px;}
